sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:42: error: Unmatched closing brace '}' ignored here
}
^